--- a/tex/folien/bibliography.bib
+++ b/tex/folien/bibliography.bib
@@ -65,3 +65,20 @@ place = {Country unknown/Code not available}, title = {Advances in neural inform
   journal={arXiv preprint arXiv:2303.17568},
   year={2023}
 }
+@article{gao2020pile,
+  title={The pile: An 800gb dataset of diverse text for language modeling},
+  author={Gao, Leo and Biderman, Stella and Black, Sid and Golding, Laurence and Hoppe, Travis and Foster, Charles and Phang, Jason and He, Horace and Thite, Anish and Nabeshima, Noa and others},
+  journal={arXiv preprint arXiv:2101.00027},
+  year={2020}
+}
+@article{cassano2023multipl,
+  title={MultiPL-E: a scalable and polyglot approach to benchmarking neural code generation},
+  author={Cassano, Federico and Gouwar, John and Nguyen, Daniel and Nguyen, Sydney and Phipps-Costin, Luna and Pinckney, Donald and Yee, Ming-Ho and Zi, Yangtian and Anderson, Carolyn Jane and Feldman, Molly Q and others},
+  journal={IEEE Transactions on Software Engineering},
+  volume={49},
+  number={7},
+  pages={3675--3691},
+  year={2023},
+  publisher={IEEE}
+}
+
