--- a/tex/folien/OS_2024_presentation_mocsy.tex
+++ b/tex/folien/OS_2024_presentation_mocsy.tex
@@ -17,7 +17,7 @@
 
 \setbeamertemplate{footline}[text line]{%
   \parbox{\linewidth}{\vspace*{-8pt}OS: Künstliche Intelligenz und Software Engineering - Prof. Andreas Both - Sommersemester 2024 - HTWK Leipzig\hfill\insertpagenumber}}
-        
+
 \setbeamercolor{title}{fg=black}
 \usepackage[inkscapearea=page]{svg}
 \usepackage[edges]{forest}
@@ -76,7 +76,7 @@
 	\end{beamercolorbox}%
 }
 \addtobeamertemplate{footnote}{}{\vspace{2ex}}
-\makeatother 
+\makeatother
 
 \section{Motivation}
 \begin{frame}{Problemstellung}
@@ -103,7 +103,7 @@ Motivation: Es soll sichergestellt sein, dass durch LLMs erzeugter Code korrekt 
         \includegraphics[width=0.8\paperwidth]{images/sortedlistwrongnoHE.png}
         \caption{Von ChatGPT erzeugter inkorrekter Code\cite{liu2024your}}
     \end{figure}
-
+\end{frame}
 \begin{frame}{Fragestellung}
 
 \centering Wie kann man die funktionale Korrektheit von durch LLMs erzeugtem Code messen?
@@ -192,6 +192,7 @@ GPT-J\cite{wang2021gptj} & 6B & Juni 2021 & the Pile  \\ \hline
 TabNine\footnote{https://www.tabnine.com/} &  & Mai 2021 & \\ \hline
 Codex & 12M-12B & Mai 2020 & 54 Mio Python GitHub Repos \\ \hline
 \end{tabular}
+\end{table}
 \end{frame}
 
 \begin{frame}{Ergebnisse}
